@@ -121,10 +121,9 @@ spacex-combinator=SpaceX Combinator
 spacex-combinator-stage=SpaceX Combinator (Stage Only)
 
 [mod-setting-name]
-SpaceX-game-mode=SpaceX game mode
 SpaceX-research=SpaceX research cost multiplier
 SpaceX-production=SpaceX production cost multiplier
-SpaceX-launch-profile=SpaceX launch profile
+SpaceX-launch-multiplier=SpaceX component launch multiplier
 SpaceX-ignore-tech-multiplier=SpaceX ignore tech price multiplier
 SpaceX-no-space-sci=SpaceX remove space science from ftl drive technology
 SpaceX-cheaper-fusion-reactor=SpaceX cheaper fusion reactor
@@ -135,10 +134,9 @@ SpaceX-split-combinator=SpaceX split combinator output (required item, stage)
 SpaceX-log-days=Show days in the Log
 
 [mod-setting-description]
-SpaceX-game-mode=SpaceX main difficulty settings.  Classic will give a 0.14 equivalent experience, SpaceX Plus increases research cost 4x production cost 2x and requires 5x launch profile, SpaceX Extreme increases research cost 16x, production cost 16x and launches required 25x.
 SpaceX-research-cost=Research cost multiplier.
 SpaceX-production-cost=Production cost multiplier.
-SpaceX-launch-profile=Required number of launches : classic is v0.14 numbers, launch mania is all classic numbers x 5, launch meglo mania is all classic numbers x 25. eg launch mania requires 35 satellites, 50 drydock components and 5 ftl drives etc
+SpaceX-launch-multiplier=Component launch multiplier. E.g. x10 means every component must be delivered 10 times more
 SpaceX-ignore-tech-multiplier=SpaceX tech prices are fixed and unaffected by changes to the vanilla game's technology price multiplier used for marathon games.  By default this multiplier is in addition to the SpaceX research cost multiplier, so check this to vary the costs independently (makes marathon SpaceX games easier).
 SpaceX-no-space-sci=By default the final SpaceX technology now requires Space Science.  Checking this setting will remove the space science requirement from the final technology research (makes game easier).
 SpaceX-cheaper-fusion-reactor=The recipe cost of the fusion reactor component is reduced to 40 portable fusion reactors.  This makes them cost 10k processing units (same as in v0.14) rather than 25k processing units that is the standard v0.15 cost (makes game easier).
