@@ -101,10 +101,8 @@ spacex-combinator=Комбинатор, который производит си
 spacex-combinator=SpaceX комбинатор
 
 [mod-setting-name]
-SpaceX-game-mode=Режим игры SpaceX
 SpaceX-research=Множитель затрат на исследования SpaceX
 SpaceX-production=Коэффициент стоимости производства SpaceX
-SpaceX-launch-profile=Профиль запуска SpaceX
 SpaceX-ignore-tech-multiplier=SpaceX игнорирует технический множитель цен
 SpaceX-no-space-sci=SpaceX удаляет космическую науку с технологии сверхсветового двигателя
 SpaceX-cheaper-fusion-reactor=Более дешевый SpaceX термоядерный реактор
@@ -113,10 +111,8 @@ SpaceX-no-popup=Отключить всплывающие окна
 SpaceX-auto-continue=Включить автопродолжение
 
 [mod-setting-description]
-SpaceX-game-mode=Основные настройки сложности SpaceX. Classic предоставит 0.14 эквивалентный опыт, SpaceX Plus увеличивает затраты на исследования 4x себестоимость продукции 2x и требует 5x стартового профиля, SpaceX Extreme увеличивает затраты на исследования 16x, стоимость производства 16x и требования запуска 25x.
 SpaceX-research-cost=Исследовательский мультипликатор затрат.
 SpaceX-production-cost=Мультипликатор стоимости продукции.
-SpaceX-launch-profile=Требуемое количество запусков: Классика - номера v0.14, запуск Мании - все классические числа x 5, запуск Мегало Мания - все классические числа x 25. Например, Мания требует 35 спутников, 50 компонентов сухого дозатора и 5 сверхскоростных дисков и т. д.
 SpaceX-ignore-tech-multiplier=Цены на технологии SpaceX фиксированы и не подвержены изменениям в мультипликаторе цен на технологию ванили, используемом для марафонских игр. По умолчанию этот множитель является дополнением к мультипликатору затрат на исследования SpaceX, поэтому проверьте это, чтобы варьировать затраты независимо (делает игры Марафон SpaceX проще).
 SpaceX-no-space-sci=По умолчанию последняя технология SpaceX теперь требует Space Science. Проверка этого параметра позволит исключить потребность в космической науке из окончательного исследования технологий (упрощает игру).
 SpaceX-cheaper-fusion-reactor=Стоимость рецепта термоядерного реактора снижена до 40 переносных термоядерных реакторов. Это делает их стоимостью 10 тыс. Единиц обработки (то же, что и в версии v.14), а не 25 тыс. Единиц обработки, что является стандартной стоимостью v0.15 (упрощает игру).
